// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns a valid CSS 1`] = `
"
    
  font-family: IBM Plex Sans, Lucida Grande, Tahoma, Verdana, Arial, sans-serif;

    
    font-size: 14px;
    line-height: 1.57;
  
    
    font-size: 14px;
    line-height: 1.57;
  
  "
`;

exports[`works with "withFallback" powered styles (css) 1`] = `
"
      
    
  font-family: IBM Plex Sans, Lucida Grande, Tahoma, Verdana, Arial, sans-serif;

    
    font-size: 14px;
    line-height: 1.57;
  
    
      color: #28beb8;
    
  
    "
`;

exports[`works with "withFallback" powered styles 1`] = `
.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #6D7983;
  color: #909BA3;
  color: #28beb8;
  color: rgba(0,193,187,0.6);
}

<Styled(div)>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;
